--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,18 +9,19 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="248dp"
-        android:layout_height="233dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/logo"
-        android:contentDescription="Logo" />
+            android:id="@+id/imageView"
+            android:layout_width="174dp"
+            android:layout_height="167dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@mipmap/logo"
+            android:contentDescription="@string/logo" app:layout_constraintHorizontal_bias="0.497"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/userID"/>
 
     <EditText
         android:id="@+id/userID"
