--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,29 +19,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@mipmap/logo"
             android:contentDescription="@string/logo" app:layout_constraintHorizontal_bias="0.497"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/userID"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/userID" app:layout_constraintVertical_bias="0.534"/>
 
     <EditText
-        android:id="@+id/userID"
-        android:layout_width="250dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/user_id"
-        android:inputType="textPersonName"
-        android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.278" />
+            android:id="@+id/userID"
+            android:layout_width="250dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:hint="@string/user_id"
+            android:inputType="textPersonName"
+            android:singleLine="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/password"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="45dp"
@@ -54,28 +49,26 @@
             app:layout_constraintHorizontal_bias="0.496"
             android:autofillHints="Password"
             android:hint="@string/password"
-            app:layout_constraintTop_toBottomOf="@+id/userID" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+            android:layout_marginBottom="152dp" app:layout_constraintBottom_toTopOf="@+id/login_button"/>
     <Button
             android:text="@string/login_button"
             android:layout_width="220dp"
             android:layout_height="40dp"
-            android:id="@+id/login_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="188dp"
+            android:id="@+id/login_button" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintTop_toBottomOf="@+id/password"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/signup_button"/>
     <TextView
             android:text="@string/sign_up"
             android:layout_width="200dp"
             android:layout_height="20dp"
             android:id="@+id/signup_button" android:contextClickable="false"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_button"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:clickable="true" android:textColor="#2180F3"
             app:layout_constraintHorizontal_bias="0.497" android:focusableInTouchMode="true"
-    />
+            android:layout_marginBottom="172dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
