--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -30,22 +30,20 @@
             android:singleLine="true" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintHorizontal_bias="0.496"
             android:hint="@string/password"
             android:autofillHints="@string/password"
-            app:layout_constraintTop_toBottomOf="@+id/email"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/confirm_password"/>
     <TextView
             android:text="@string/login"
             android:layout_width="200dp"
             android:layout_height="20dp"
             android:id="@+id/login_button" android:contextClickable="false"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:clickable="true" android:textColor="#2180F3"
             app:layout_constraintHorizontal_bias="0.497" android:focusableInTouchMode="true"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/signup_button"
-            app:layout_constraintVertical_bias="0.011"/>
+            android:layout_marginBottom="168dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="@string/sign_up_button"
             android:layout_width="220dp"
@@ -53,10 +51,9 @@
             android:id="@+id/signup_button" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="92dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/confirm_password"
-            app:layout_constraintVertical_bias="0.355"/>
+            app:layout_constraintHorizontal_bias="0.497"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/login_button"
+    />
     <EditText
             android:layout_width="250dp"
             android:layout_height="45dp"
@@ -66,9 +63,9 @@
             android:singleLine="true" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.503"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.189" android:autofillHints="" android:hint="@string/user_id"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
+            android:autofillHints="" android:hint="@string/user_id" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/email" app:layout_constraintVertical_bias="1.0"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="45dp"
@@ -77,18 +74,19 @@
             android:id="@+id/confirm_password"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
             android:hint="@string/confirm_password"
             android:autofillHints="@string/confirm_password"
-            app:layout_constraintTop_toBottomOf="@+id/password"/>
+            android:layout_marginBottom="104dp" app:layout_constraintBottom_toTopOf="@+id/signup_button"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="45dp"
             android:inputType="textPersonName|textEmailAddress"
             android:ems="10"
             android:id="@+id/email"
-            app:layout_constraintTop_toBottomOf="@+id/userID" android:layout_marginEnd="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:hint="@string/email"
-            app:layout_constraintHorizontal_bias="0.503" android:autofillHints="@string/email"/>
+            app:layout_constraintHorizontal_bias="0.496" android:autofillHints="@string/email"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/password"/>
 </android.support.constraint.ConstraintLayout>
