--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,17 @@
     tools:context=".Login">
 
 
+    <EditText
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:inputType="textPersonName|textEmailAddress"
+            android:ems="10"
+            android:id="@+id/email2"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email"
+            app:layout_constraintHorizontal_bias="0.496" android:autofillHints="@string/email"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/password"/>
     <ImageView
             android:id="@+id/imageView"
             android:layout_width="174dp"
@@ -19,27 +30,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@mipmap/logo"
             android:contentDescription="@string/logo" app:layout_constraintHorizontal_bias="0.497"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/userID" app:layout_constraintVertical_bias="0.534"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/email2"/>
 
     <EditText
-            android:id="@+id/userID"
             android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:autofillHints=""
-            android:ems="10"
-            android:hint="@string/user_id"
-            android:inputType="textPersonName"
-            android:singleLine="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/password"/>
-    <EditText
-            android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
