--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
             app:layout_constraintBottom_toTopOf="@+id/userID" app:layout_constraintVertical_bias="0.666"/>
     <EditText
             android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
@@ -56,19 +56,19 @@
     />
     <EditText
             android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/userID"
             android:singleLine="true" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
             android:autofillHints="" android:hint="@string/user_id" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/email" app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintBottom_toTopOf="@+id/email"/>
     <EditText
             android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/confirm_password"
@@ -80,7 +80,7 @@
             android:layout_marginBottom="104dp" app:layout_constraintBottom_toTopOf="@+id/signup_button"/>
     <EditText
             android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_height="50dp"
             android:inputType="textPersonName|textEmailAddress"
             android:ems="10"
             android:id="@+id/email"
