--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,8 @@
             app:srcCompat="@mipmap/logo"
             android:contentDescription="@string/logo" app:layout_constraintHorizontal_bias="0.497"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/email2"/>
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@id/email2"/>
 
     <EditText
             android:layout_width="250dp"
