--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -8,6 +8,7 @@
                                         android:layout_height="match_parent"
                                         android:layout_marginLeft="16dp"
                                         android:layout_marginRight="16dp"
+                                        android:layout_marginTop="50dp"
                                         app:layoutManager="LinearLayoutManager"
                                         tools:context=".ProductListActivity"
                                         tools:listitem="@layout/product_list_content"/>
