--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,8 +19,8 @@
             app:srcCompat="@mipmap/logo"
             android:contentDescription="@string/logo"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/userID" app:layout_constraintVertical_bias="0.666"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/email"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="45dp"
@@ -54,18 +54,6 @@
             app:layout_constraintHorizontal_bias="0.497"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/login_button"
     />
-    <EditText
-            android:layout_width="250dp"
-            android:layout_height="45dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/userID"
-            android:singleLine="true" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
-            android:autofillHints="" android:hint="@string/user_id" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/email" app:layout_constraintVertical_bias="1.0"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="45dp"
