--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,15 @@
         tools:context=".MainActivity">
 
 
-    <FrameLayout
+    <RelativeLayout
             android:id="@+id/frameLayout"
-            android:layout_width="377dp"
-            android:layout_height="575dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/nav_view" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/nav_view"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
         <EditText
@@ -27,13 +26,22 @@
             android:layout_height="50dp"
             android:hint="search"
             android:autofillHints="search"
+            android:imeOptions="actionSearch"
+            android:singleLine="true"
             android:inputType="text"/>
-        <include layout="@layout/product_list"/>
-        <ListView
-                android:id="@+id/list_view"
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/product_list"
+                android:name="com.csc309.arspace.ProductListFragment"
+                android:layout_below="@id/search"
+                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-    </FrameLayout>
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                app:layoutManager="LinearLayoutManager"
+                tools:context=".ProductListActivity"
+                tools:listitem="@layout/product_list_content"/>
+    </RelativeLayout>
 
 
     <!--<android.support.design.widget.AppBarLayout
