--- a/app/src/main/res/layout/product_list_content.xml
+++ b/app/src/main/res/layout/product_list_content.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_marginLeft="10dp"
-              android:layout_marginRight="10dp"
               android:layout_height="150dp"
-              android:orientation="horizontal">
+              android:orientation="horizontal"
+              android:layout_marginStart="10dp"
+              android:layout_marginEnd="10dp">
 
     <ImageView
         android:id="@+id/prodImg"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_launcher"/>
+        android:layout_alignParentStart="true"
+        android:layout_height="100dp"/>
+
     <TextView
             android:id="@+id/id_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:layout_toRightOf="@id/prodImg"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@id/prodImg"
             android:textAppearance="?attr/textAppearanceListItem"/>
 
     <TextView
@@ -24,7 +25,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/prodImg"
+            android:layout_alignStart="@id/id_text"
             android:layout_below="@id/id_text"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"/>
+            android:layout_marginTop="1dp"
+            android:textStyle="italic"
+            android:textColor="#444444" />
+
+    <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignBottom="@id/id_text"
+            android:text="$24.99"/>
+
+    <TextView
+            android:id="@+id/dimensions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/prodImg"
+            android:layout_alignStart="@id/id_text"
+            android:layout_below="@id/content"
+            android:layout_marginTop="5dp"
+            android:textStyle="italic"
+            android:text="Dimensions:"
+            android:textSize="12sp"
+            android:textAppearance="?attr/textAppearanceListItem" />
 </RelativeLayout>
